--- a/index.html
+++ b/index.html
@@ -61,4 +61,5 @@
     Coded by <a href="#">Natalia Oliveira</a>.
   </footer>
 </body>
+  <script type="module" src="./app/controller/index.js"></script>
 </html>
