--- a/login.html
+++ b/login.html
@@ -19,7 +19,17 @@
     </nav>
   </header>
   <main>
-    
+    <form>
+      <div>
+        <label for="email"></label>
+        <input type="email" name="email" id="email">
+      </div>
+      <div>
+        <label for="pass"></label>
+        <input type="password" name="pass" id="pass">
+      </div>
+      <button>Login</button>
+    </form>
   </main>
   
   <footer class="attribution">
