Set login and register form layout and css

--- a/login.html
+++ b/login.html
@@ -19,16 +19,17 @@
     </nav>
   </header>
   <main>
-    <form>
-      <div>
-        <label for="email"></label>
-        <input type="email" name="email" id="email">
+    <h1 class="form-title">Login To Interact With the Comment Section</h1>
+    <form class="user-form">
+      <div class="input-container">
+        <label for="email">Enter email</label>
+        <input type="email" name="email" id="email" required>
       </div>
-      <div>
-        <label for="pass"></label>
-        <input type="password" name="pass" id="pass">
+      <div class="input-container">
+        <label for="pass">Enter password</label>
+        <input type="password" name="pass" id="pass" required>
       </div>
-      <button>Login</button>
+      <button type="submit">Login</button>
     </form>
   </main>
   
