--- a/register.html
+++ b/register.html
@@ -19,8 +19,26 @@
     </nav>
   </header>
   <main>
-    
-    
+    <h1 class="form-title">Register To Interact With the Comment Section</h1>
+    <form class="user-form">
+      <div class="input-container">
+        <label for="username">Enter username</label>
+        <input type="username" name="username" id="username" required>
+      </div>
+      <div class="input-container">
+        <label for="email">Enter email</label>
+        <input type="email" name="email" id="email" required>
+      </div>
+      <div class="input-container">
+        <label for="pass">Enter password</label>
+        <input type="password" name="pass" id="pass" required>
+      </div>
+      <div class="file-container">
+        <input type="file" name="img" id="img">
+        <label for="img" class="img-label">Choose Profile Picture</label>
+      </div>
+      <button type="submit">Register</button>
+    </form>
   </main>
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
