adjust login form and logout with localstorage

--- a/index.html
+++ b/index.html
@@ -14,46 +14,13 @@
   <header class="nav-header">
     <nav aria-label="main navigation">
       <a class="active" href="/">Comments</a>
-      <a href="/login.html">Login</a>
-      <a href="/register.html">Register</a>
+      <a data-nav="login" href="/login.html">Login</a>
+      <button data-nav="logout" class="link">Logout</button>
     </nav>
   </header>
   <main>
     <section class="layer">
-      <!-- <div class="comment">
-        <div class="container-counter">
-          <button type="button" class="btn--operator" data-button="add">+</button>
-          <output class="counter">15</output>
-          <button type="button" class="btn--operator" data-button="subtract">-</button>
-        </div>
-        <div class="container-comment">
-          <header>
-            <div>
-              <img src="./assets/images/avatars/image-amyrobson.webp" alt="">
-              <p class="comment--username">amyrobson</p>
-              <p class="comment--identification">you</p>
-              <p class="comment--time">1 month ago</p>
-            </div>
-            <div class="container-buttons">
-              <button class="btn--reply">Reply</button>
-              <button class="btn--delete">Delete</button>
-              <button class="btn--edit">Edit</button>
-            </div>
-          </header>
-          <p class="comment--text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-            Consequuntur, ad. Enim in facilis, itaque dignissimos nostrum voluptatem temporibus?
-            Rerum neque iusto asperiores qui dolores omnis sint molestias temporibus! Nostrum, aut!
-          </p>
-        </div>
-      </div> -->
     </section>
-
-    <!-- <form id="comment-form">
-      <img src="./assets/images/avatars/image-juliusomo.webp" alt="">
-      <textarea name="comment" id="comment" placeholder="Add a comment..." required></textarea>
-      <button type="submit" class="btn--submit">Send</button>
-    </form> -->
   </main>
   
   <footer class="attribution">
