Add new comment | Fix reply reload bug

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     </nav>
   </header>
   <main>
+    <form class="comment-form" id="form-new">
+      <textarea name="comment" id="comment-new"></textarea>
+      <button type="submit" class="btn--submit">Comment</button>
+    </form>
+    <section id="comment-section"></section>
   </main>
   
   <footer class="attribution">
